<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nrp"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="number"
        android:id="@+id/edtNRP"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap"
        android:layout_marginTop="8dp"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:id="@+id/edtNama"
        />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/major"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:id="@+id/edtMajor"
        android:hint="@string/long_click_for_options"
        android:textSize="20sp"
        android:backgroundTint="#ffffff"
        />

    <EditText
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/edtHasil"
        android:layout_weight="1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnPopup"
        android:text="Show Pop Up"/>

</LinearLayout>